--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "project setup",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "development": "nodemon",
+    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+    "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
   "author": "Vincent Luong",
   "license": "ISC",
